--- a/jogomemoria/paginas/jogo.html
+++ b/jogomemoria/paginas/jogo.html
@@ -24,7 +24,12 @@
             <div class="grid">
             </div>
             <div class="ranking">
-                <h1>RANKING DE TEMPO</h1>
+                <div class="div1ranking"><h1>RANKING DE TEMPO</h1></div>
+                <div class="div2ranking">
+                    <ul class="listaranking">
+
+                    </ul>
+                </div>
             </div>
         </div>
     </main>
